# aws-saver

./: .gitignore  GITHUB_ACTIONS_SETUP.md  Makefile  README.md  TERRAFORM_CLOUD_SETUP.md  fix-colima.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
infra/terraform/: backend.tf  lambda.tf  locals.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
scripts/: local_invoke.py  remote_invoke.py  sample_event.json
src/lambdas/: __init__.py
src/lambdas/scan_ec2_unattached_ebs/: __init__.py  handler.py
src/saverbot/: __init__.py  assume.py  config.py  errors.py  jsonlog.py
src/saverbot/scanners/: __init__.py  ec2_unattached.py
tests/: __init__.py  test_assume_errors.py  test_ec2_unattached.py
